--- a/public/403.html
+++ b/public/403.html
@@ -41,16 +41,16 @@
   </style>
   </head>
 <body>
-  <div class="bg-gradient-to-r from-red-300 to-yellow-200">
+  <div class="bg-gradient-to-r from-yellow-300 to-green-200">
     <div class="w-9/12 m-auto py-16 min-h-screen flex items-center justify-center">
       <div class="w-full bg-white shadow overflow-hidden sm:rounded-lg pb-8">
         <div class="border-t border-gray-200 text-center pt-8">
-          <h1 class="text-9xl font-bold text-red-400">500</h1>
-          <h1 class="text-6xl font-medium py-8">Server Error!</h1>
-          <button class="bg-gradient-to-r from-red-400 to-yellow-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md mr-6">
+          <h1 class="text-9xl font-bold text-yellow-400">403</h1>
+          <h1 class="text-6xl font-medium py-8">For Bidden!</h1>
+          <button class="bg-gradient-to-r from-yellow-400 to-green-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md mr-6">
           HOME
           </button>
-          <button class="bg-gradient-to-r from-red-400 to-red-500 hover:from-red-500 hover:to-red-500 text-white font-semibold px-6 py-3 rounded-md">
+          <button class="bg-gradient-to-r from-yellow-400 to-yellow-500 hover:from-yellow-500 hover:to-yellow-500 text-white font-semibold px-6 py-3 rounded-md">
           Contact Us
           </button>
         </div>
