--- a/public/403.html
+++ b/public/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>404 Error Page Design In Tailwind CSS</title>
+  <title>403 Error</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300i,400,700&display=swap" rel="stylesheet">
@@ -46,13 +46,13 @@
       <div class="w-full bg-white shadow overflow-hidden sm:rounded-lg pb-8">
         <div class="border-t border-gray-200 text-center pt-8">
           <h1 class="text-9xl font-bold text-yellow-400">403</h1>
-          <h1 class="text-6xl font-medium py-8">For Bidden!</h1>
-          <button class="bg-gradient-to-r from-yellow-400 to-green-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md mr-6">
+          <h1 class="text-6xl font-medium py-8">ForBidden!</h1>
+          <a href="/" class="bg-gradient-to-r from-yellow-400 to-green-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md mr-6">
           HOME
-          </button>
-          <button class="bg-gradient-to-r from-yellow-400 to-yellow-500 hover:from-yellow-500 hover:to-yellow-500 text-white font-semibold px-6 py-3 rounded-md">
+          </a>
+          <a href="contacts/new" class="bg-gradient-to-r from-yellow-400 to-yellow-500 hover:from-yellow-500 hover:to-yellow-500 text-white font-semibold px-6 py-3 rounded-md">
           Contact Us
-          </button>
+          </a>
         </div>
       </div>
     </div>
