--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>404 Error Page Design In Tailwind CSS</title>
+  <title>500 Error</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300i,400,700&display=swap" rel="stylesheet">
@@ -47,12 +47,12 @@
         <div class="border-t border-gray-200 text-center pt-8">
           <h1 class="text-9xl font-bold text-red-400">500</h1>
           <h1 class="text-6xl font-medium py-8">Server Error!</h1>
-          <button class="bg-gradient-to-r from-red-400 to-yellow-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md mr-6">
+          <a href="/" class="bg-gradient-to-r from-red-400 to-yellow-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md mr-6">
           HOME
-          </button>
-          <button class="bg-gradient-to-r from-red-400 to-red-500 hover:from-red-500 hover:to-red-500 text-white font-semibold px-6 py-3 rounded-md">
+          </a>
+          <a href="contacts/new" class="bg-gradient-to-r from-red-400 to-red-500 hover:from-red-500 hover:to-red-500 text-white font-semibold px-6 py-3 rounded-md">
           Contact Us
-          </button>
+          </a>
         </div>
       </div>
     </div>
